# fall-detection

./: CMakeLists.txt  README.md.md  testmodel.sh
SVM/: loadset.py  svm.py  svmtest.mat
hi_build/: CMakeLists.txt  copy2dest.sh
hi_build/output_hi3559/include/opencv2/: cvconfig.h
hi_build/output_hi3559/lib/: libopencv_calib3d.so.3.4.0  libopencv_core.so.3.4.0  libopencv_features2d.so.3.4.0  libopencv_flann.so.3.4.0  libopencv_highgui.so.3.4.0  libopencv_imgcodecs.so.3.4.0  libopencv_imgproc.so.3.4.0  libopencv_ml.so.3.4.0  libopencv_objdetect.so.3.4.0  libopencv_photo.so.3.4.0  libopencv_shape.so.3.4.0  libopencv_stitching.so.3.4.0  libopencv_superres.so.3.4.0  libopencv_video.so.3.4.0  libopencv_videoio.so.3.4.0  libopencv_videostab.so.3.4.0
hi_build/output_hi3559/lib/pkgconfig/: opencv.pc
include/: classifier.h  falldetection.h  hi_fall_detector.h  roisimilarity.h  tracker.h  yolov5.h
include/ncnn/: ncnn_export.h
ncnn_model/v0.1/: yolov5s-sim.param
src/: classifier.cpp  falldetection.cpp  hi_fall_detector.cpp  roisimilarity.cpp  tracker.cpp  yolov5.cpp
